<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CustomDialog</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exit_dialog">exit dialog</string>
    <string name="exit_dialog_title">退出</string>
    <string name="exit_dialog_message">确定退出本程序?</string>
    <string name="exit_dialog_cancel">取消</string>
    <string name="exit_dialog_ok">确定</string>
    <string name="loading">加载中...</string>
    <string name="dialog_demo">dialog demo</string>
    <string name="dialog_fragment_demo">dialog fragment demo</string>

</resources>