<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/dialog_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_title_height" >

        <ImageView
            android:id="@+id/icon_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_launcher"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/icon_image_view"
            android:gravity="center"
            android:text="@string/exit_dialog_title"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_title" >
        </TextView>
    </RelativeLayout>

    <View
        android:id="@+id/title_message_divider_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/dialog_title_layout"
        android:background="@color/black" />

    <TextView
        android:id="@+id/message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_message_height"
        android:layout_below="@id/title_message_divider_view"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dialog_message_margin_left"
        android:gravity="center_vertical"
        android:text="@string/exit_dialog_message"
        android:textColor="@color/black"
        android:textSize="@dimen/dialog_message" >
    </TextView>

    <View
        android:id="@+id/message_action_divider_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/message_text_view"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_action_text_height"
        android:layout_below="@id/message_action_divider_view"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/dialog_action_btn_selector"
            android:gravity="center"
            android:text="@string/exit_dialog_cancel"
            android:textSize="@dimen/dialog_action_text" />

        <View
            android:id="@+id/cancel_ok_divider_view"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/dialog_action_btn_selector"
            android:gravity="center"
            android:text="@string/exit_dialog_ok"
            android:textSize="@dimen/dialog_action_text" />
    </LinearLayout>

</RelativeLayout>